// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePageFairsModule does not request past fairs if it has 8 running ones 1`] = `
Object {
  "homePage": Object {
    "fairsModule": Object {
      "results": Array [
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
      ],
    },
  },
}
`;

exports[`HomePageFairsModule works 1`] = `
Object {
  "homePage": Object {
    "fairsModule": Object {
      "results": Array [
        Object {
          "isActive": false,
          "name": "Artissima 2017",
          "slug": "artissima-2017",
        },
        Object {
          "isActive": false,
          "name": "Zâ“ˆONAMACO FOTO & SALÃ“N DEL ANTICUARIO 2017",
          "slug": "zonamaco-foto-and-sal-n-del-anticuario-2017",
        },
      ],
    },
  },
}
`;
